--- a/css/style.css
+++ b/css/style.css
@@ -1895,7 +1895,7 @@ html.is-animating .transition-fade2 {
   left: -10vh;
   width: 150%;
   height: 47vh;
-  opacity: 0;
+  opacity: 1;
   background: radial-gradient(50% 50% at 50% 50%, #B2BFD8 0%, rgba(217, 217, 217, 0) 100%);
 }
 
@@ -2036,12 +2036,10 @@ html.is-animating .transition-fade2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #fff;
   z-index: 9999;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: 0.9s;
   opacity: 1;
 }
 
@@ -2055,6 +2053,47 @@ html.is-animating .transition-fade2 {
   transition: 0.4s;
 }
 
+#preloader .backgraund_bar_box {
+  background-color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  transition: 0.6s;
+  z-index: 1;
+  transform: skew(10deg) scale(1.3);
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+
+@-webkit-keyframes preloder {
+  0% {
+    transform: skew(10deg) scale(1.3);
+  }
+
+  100% {
+    transform: skew(10deg) scale(1.3) translateX(100%);
+  }
+}
+
+@keyframes preloder {
+  0% {
+    transform: skew(10deg) scale(1.3);
+  }
+
+  100% {
+    transform: skew(10deg) scale(1.3) translateX(100%);
+  }
+}
+
+.preload_anim_on {
+  -webkit-animation: preloder 0.6s;
+          animation: preloder 0.6s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
 .progress-bar_box {
   border-radius: 15px;
   overflow: hidden;
@@ -2063,6 +2102,10 @@ html.is-animating .transition-fade2 {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2;
+  transition: 0.4s;
+  transition-delay: 0.6s;
+  opacity: 1;
 }
 
 .progresss-bar-main {
