--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 body {
-  --swup-overlay-theme-duration: .7s;
+  --swup-fade-theme-duration: .3s;
 }
 
 #swup {
@@ -55,7 +55,6 @@ nav {
   align-items: center;
   -webkit-backdrop-filter: blur(8px);
   backdrop-filter: blur(8px);
-  transition: 0.5s;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
@@ -71,10 +70,10 @@ nav li {
 nav li a {
   text-decoration: none;
   color: black;
-  transition: 1s;
   font-size: 1.2rem;
   z-index: 100;
   font-weight: 400;
+  transition: 0.2s;
 }
 
 nav::before {
@@ -89,11 +88,11 @@ a {
   transition: 0.13s;
 }
 
-a:hover {
+a:hover .mobile_pic {
   filter: brightness(85%);
 }
 
-a:active {
+a:active .mobile_pic {
   filter: brightness(100%);
 }
 
@@ -1564,6 +1563,15 @@ html.is-animating .transition-fade2 {
   color: rgb(80, 80, 80);
 }
 
+.aboutTextmain_mob {
+  display: none;
+  white-space: normal;
+}
+
+.aboutTextmain_mob span {
+  font-size: 7vw;
+}
+
 .block_one_mini {
   display: flex;
   justify-content: center;
@@ -1849,10 +1857,6 @@ html.is-animating .transition-fade2 {
   z-index: -1;
 }
 
-.lds-dual-ring_home {
-  top: 14vh;
-}
-
 .lds-dual-ring:after {
   content: " ";
   display: block;
@@ -1906,9 +1910,14 @@ html.is-animating .transition-fade2 {
   position: relative;
   width: 100%;
   height: 27vh;
+}
+
+.mobile_pic img {
+  border-radius: 39px;
   -o-object-fit: cover;
      object-fit: cover;
-  border-radius: 39px;
+  width: 100%;
+  height: 100%;
 }
 
 .row_info_main {
@@ -2279,8 +2288,13 @@ html.is-animating .transition-fade2 {
 }
 
 @media screen and (max-width: 1100px) {
-  .left_box_bar {
+  .left_box_bar,
+  .aboutTextmain_desk {
     display: none;
+  }
+
+  .aboutTextmain_mob {
+    display: inline;
   }
 
   .about_text {
