--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 body {
-  --swup-fade-theme-duration: .3s;
+  --swup-overlay-theme-duration: .7s;
 }
 
 #swup {
@@ -55,6 +55,7 @@ nav {
   align-items: center;
   -webkit-backdrop-filter: blur(8px);
   backdrop-filter: blur(8px);
+  transition: 0.5s;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
@@ -70,10 +71,10 @@ nav li {
 nav li a {
   text-decoration: none;
   color: black;
+  transition: 1s;
   font-size: 1.2rem;
   z-index: 100;
   font-weight: 400;
-  transition: 0.2s;
 }
 
 nav::before {
@@ -88,11 +89,11 @@ a {
   transition: 0.13s;
 }
 
-a:hover .mobile_pic {
+a:hover {
   filter: brightness(85%);
 }
 
-a:active .mobile_pic {
+a:active {
   filter: brightness(100%);
 }
 
@@ -504,14 +505,37 @@ html.is-animating .transition-fade2 {
   z-index: 1;
 }
 
+.tasks_box_friesa .col-4 h2 {
+  font-weight: 600 !important;
+  font-size: 5rem !important;
+}
+
+.tasks_box_friesa .col-8 {
+  background-color: #1E030A;
+  color: white;
+  padding: 100px;
+  border-radius: 80px;
+  font-weight: 500 !important;
+}
+
 .black_box {
   background-color: #181818;
   color: white;
+  padding-top: 100px;
+}
+
+.black_box .content_header h2 {
+  font-size: 3.5rem;
+}
+
+.black_box .content_header h3 {
+  color: #767676;
 }
 
 .target_audience {
   position: relative;
   padding: 150px 0px;
+  font-weight: 500 !important;
 }
 
 .target_audience .row {
@@ -529,6 +553,10 @@ html.is-animating .transition-fade2 {
   background-color: #252525;
   transform: translate(-50%, -50%);
   z-index: 1;
+}
+
+.reserarch {
+  font-weight: 500;
 }
 
 .comments .col-6,
@@ -579,6 +607,62 @@ html.is-animating .transition-fade2 {
   padding: 45px;
 }
 
+.comments_friesa .left_com .col-2 {
+  justify-content: end;
+}
+
+.comments_friesa .left_com .col-6 {
+  margin-left: 15px;
+}
+
+.comments_friesa .left_com .col-6::before {
+  left: 10px;
+  bottom: -10px;
+  border-top: 20px solid #6C1D32;
+  border-right: 35px solid transparent;
+  transform: rotate(10deg);
+}
+
+.comments_friesa .right_com {
+  justify-content: end;
+}
+
+.comments_friesa .right_com .col-6 {
+  margin-right: 15px;
+}
+
+.comments_friesa .right_com .col-6::before {
+  right: 10px;
+  bottom: -10px;
+  border-top: 20px solid #6C1D32;
+  border-left: 35px solid transparent;
+  transform: rotate(-10deg);
+}
+
+.comments_friesa .col-2 {
+  display: flex;
+  align-items: end;
+}
+
+.comments_friesa .col-2 img {
+  border-radius: 200px;
+}
+
+.comments_friesa .col-6 {
+  background-color: #6C1D32;
+  padding: 30px;
+  position: relative;
+  border-radius: 40px 40px 40px 40px;
+  margin-bottom: 30px;
+}
+
+.comments_friesa .col-6::before {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 0;
+}
+
 .userflow .col-12 {
   position: relative;
 }
@@ -596,6 +680,138 @@ html.is-animating .transition-fade2 {
 
 .userflow .col-12::-webkit-scrollbar-button {
   display: none;
+}
+
+.userflow_friesa .row .col-5 {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.userflow_friesa .row .col-5 h2 {
+  font-size: 3rem;
+}
+
+.friesa_mac {
+  background-color: #ececec;
+}
+
+.friesa_mac .row img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  max-width: 1000px;
+  height: 100%;
+}
+
+.friesa_mac .row .col-12 {
+  display: flex;
+  justify-content: center;
+}
+
+.friesa_mac .row .col-12 h2 {
+  font-size: 8rem;
+  font-weight: 600;
+  color: #C7C7C7;
+}
+
+.frisa_interface {
+  justify-content: center;
+  display: flex;
+  background: radial-gradient(50% 50% at 50% 50%, #252424 0%, #060606 100%);
+}
+
+.frisa_interface img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.friesa_mob {
+  background-color: #511727;
+  color: #e8e8e8;
+  padding-bottom: 100px;
+}
+
+.friesa_mob .text_plus {
+  padding: 60px;
+}
+
+.content_header {
+  justify-content: start !important;
+  display: inline !important;
+}
+
+.content_header h2 {
+  font-size: 3.5rem;
+  color: white;
+}
+
+.content_header h3 {
+  color: #767676;
+}
+
+.frisa_login {
+  padding-top: 100px;
+  background: radial-gradient(50% 50% at 50% 50%, #252424 0%, #060606 100%);
+}
+
+.frisa_login .col-12 {
+  justify-content: center;
+  display: flex;
+}
+
+.frisa_login img {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  max-width: 1400px;
+  height: 100%;
+}
+
+.frisa_chat {
+  padding-top: 100px;
+  background: radial-gradient(50% 50% at 50% 50%, #252424 0%, #060606 100%);
+}
+
+.frisa_chat .img {
+  justify-content: center;
+}
+
+.frisa_chat .col-12 {
+  justify-content: center;
+  display: flex;
+}
+
+.frisa_chat img {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  max-width: 1400px;
+  height: 100%;
+}
+
+.frisa_color {
+  padding-bottom: 250px;
+}
+
+.frisa_color .fonts_colors_con .row .col-12 h2 {
+  color: white;
+}
+
+.frisa_color .fonts_colors_con .row .col-12 h2 span {
+  color: #FFF500;
+}
+
+.frisa_color .fonts_box h3,
+.frisa_color .fonts_box h4 {
+  font-weight: 600;
+  font-family: "Inter", sans-serif;
 }
 
 .aston_home {
@@ -877,12 +1093,11 @@ html.is-animating .transition-fade2 {
 
 .bl_style {
   background-color: #000000;
-  height: 350px;
+  height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff !important;
-  padding-bottom: 100px;
 }
 
 .color_bl_1 {
@@ -1125,19 +1340,7 @@ html.is-animating .transition-fade2 {
   position: relative;
 }
 
-.fonts_box {
-  position: absolute;
-  top: 200px;
-  background-color: rgba(63, 63, 63, 0.4392156863);
-  -webkit-backdrop-filter: blur(70px);
-  backdrop-filter: blur(70px);
-  width: 100%;
-  height: 520px;
-  border-radius: 0px 0px 39px 39px;
-}
-
 .fonts_box_back {
-  height: 370px;
   width: 100%;
   background-color: #000000;
   border-radius: 0px 0px 40px 40px;
@@ -1160,7 +1363,7 @@ html.is-animating .transition-fade2 {
 .color_site_box {
   position: absolute;
   width: 100%;
-  bottom: -30px;
+  bottom: 0px;
   justify-content: center;
   padding-bottom: 0px !important;
 }
@@ -1563,15 +1766,6 @@ html.is-animating .transition-fade2 {
   color: rgb(80, 80, 80);
 }
 
-.aboutTextmain_mob {
-  display: none;
-  white-space: normal;
-}
-
-.aboutTextmain_mob span {
-  font-size: 7vw;
-}
-
 .block_one_mini {
   display: flex;
   justify-content: center;
@@ -1910,14 +2104,9 @@ html.is-animating .transition-fade2 {
   position: relative;
   width: 100%;
   height: 27vh;
-}
-
-.mobile_pic img {
-  border-radius: 39px;
   -o-object-fit: cover;
      object-fit: cover;
-  width: 100%;
-  height: 100%;
+  border-radius: 39px;
 }
 
 .row_info_main {
@@ -2288,13 +2477,8 @@ html.is-animating .transition-fade2 {
 }
 
 @media screen and (max-width: 1100px) {
-  .left_box_bar,
-  .aboutTextmain_desk {
+  .left_box_bar {
     display: none;
-  }
-
-  .aboutTextmain_mob {
-    display: inline;
   }
 
   .about_text {
@@ -2459,7 +2643,7 @@ html.is-animating .transition-fade2 {
   }
 
   .mob_off {
-    display: none;
+    display: none !important;
   }
 
   .info_up_box {
@@ -2468,6 +2652,10 @@ html.is-animating .transition-fade2 {
 
   .img_as {
     width: 100% !important;
+  }
+
+  .img_as p {
+    color: #767676;
   }
 
   .pg-1_bk_0 {
@@ -2640,6 +2828,40 @@ html.is-animating .transition-fade2 {
   .newspage img {
     margin-top: 0px;
   }
+
+  .tasks_box_friesa {
+    padding-top: 100px;
+  }
+
+  .tasks_box_friesa .col-8 {
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 0px;
+    font-weight: 500 !important;
+  }
+
+  .userflow_friesa {
+    padding-top: 100px;
+  }
+
+  .friesa_mac h2 {
+    font-size: 4rem !important;
+  }
+
+  .friesa_mob {
+    padding-top: 100px;
+  }
+
+  .content_header {
+    width: 95% !important;
+  }
+
+  .content_header h2 {
+    font-size: 2rem !important;
+  }
+
+  .Friesa_phones {
+    width: 150%;
+  }
 }
 
 @media screen and (max-width: 736px) and (max-height: 414px) {
@@ -2714,5 +2936,14 @@ html.is-animating .transition-fade2 {
 
   .pg-1_bk_3 .color_bl_3 {
     border-radius: 0px 0px 0px 0px;
+  }
+
+  .color_site_box {
+    bottom: -60px;
+  }
+
+  .fonts_box_back {
+    padding-bottom: 50px;
+    border-radius: 0px;
   }
 }
