--- a/css/style.css
+++ b/css/style.css
@@ -1066,7 +1066,7 @@ html.is-animating .transition-fade2 {
 }
 
 .pg-1_bk_2_ekfood .col-12 h2 {
-  font-size: 8rem !important;
+  font-size: 8rem;
   font-weight: 500;
   color: #ffffff;
 }
@@ -1153,9 +1153,20 @@ html.is-animating .transition-fade2 {
   z-index: 100 !important;
 }
 
-.pg-1_bk_3 h2 {
+.pg-1_bk_2_ekfood h2 {
+  color: #eee;
+  font-size: 8rem;
   font-weight: 400;
   z-index: 100 !important;
+}
+
+.pg-1_bk_2_ekfood img {
+  border-radius: 25px;
+  margin-bottom: 20px;
+}
+
+.pg-1_bk_3 h2 {
+  font-weight: 400;
 }
 
 .pg-1_bk_2 img {
@@ -1192,6 +1203,8 @@ html.is-animating .transition-fade2 {
 
 .pg-1_bk_3 {
   padding-top: 100px;
+  z-index: 500;
+  position: relative;
 }
 
 .pg-1_bk_3 .col-12 h2 {
@@ -1505,8 +1518,10 @@ html.is-animating .transition-fade2 {
 }
 
 .page-fybrids h2 {
+  position: relative;
   font-size: 2.5rem;
   color: #388739;
+  z-index: 500;
 }
 
 .page-fybrids .col-10 {
@@ -1567,6 +1582,15 @@ html.is-animating .transition-fade2 {
 .fybrid-mob_page img {
   margin-top: 100px;
   border-radius: 40px;
+}
+
+.text_drdoogy span {
+  font-size: 2rem;
+  color: #922315;
+}
+
+.ek-mob_page {
+  margin-top: 100px;
 }
 
 .fybrid_research .comments p {
@@ -2907,7 +2931,7 @@ html.is-animating .transition-fade2 {
 }
 
 .mobile-carusel-item-img {
-  border-radius: 9%;
+  border-radius: 9% !important;
 }
 
 .pswp__img {
@@ -3068,12 +3092,20 @@ html.is-animating .transition-fade2 {
     border-radius: 0px !important;
   }
 
+  .frisa_login img {
+    width: 110%;
+  }
+
   .fonts_colors_con h2 {
     font-size: 2rem !important;
   }
 
+  .fonts_colors_con .colors_box {
+    margin-top: 2rem;
+  }
+
   .fonts_colors_con .colors_box .bl_style {
-    height: 250px !important;
+    height: 150px !important;
   }
 
   .fonts_colors_con .colors_box .fonts_box {
@@ -3099,6 +3131,57 @@ html.is-animating .transition-fade2 {
 
   .newspage .col-4 {
     margin-bottom: 0px;
+  }
+
+  .fybrid_research h2 {
+    font-size: 2.5rem;
+    font-weight: 700;
+  }
+
+  .fybrid_research .img_as p {
+    background: rgba(0, 0, 0, 0) !important;
+  }
+
+  .page_fyb {
+    margin-top: 50px !important;
+  }
+
+  .page_fyb img {
+    border-radius: 20px !important;
+  }
+
+  .font-fybrid {
+    margin-bottom: 50px;
+  }
+
+  .pg-1_bk_2_ekfood h2 {
+    font-size: 3.5rem !important;
+  }
+
+  .pg-1_bk_2_ekfood svg {
+    margin-bottom: 50px !important;
+  }
+
+  .contacts_ek {
+    margin: 50px 0px;
+  }
+
+  .ek_info p {
+    text-align: start;
+    font-weight: 500;
+    font-size: 1.5rem;
+  }
+
+  .ek-mob_page {
+    margin-top: 0px;
+  }
+
+  .font-ek h2 {
+    font-size: 3rem !important;
+  }
+
+  .fybrid-mob_page {
+    padding: 0px;
   }
 }
 
@@ -3201,12 +3284,37 @@ html.is-animating .transition-fade2 {
     padding-bottom: 10px;
   }
 
+  .pg-1_bk_2_ekfood {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .pg-1_bk_2_ekfood h2 {
+    font-size: 2rem;
+  }
+
+  .pg-1_bk_2_ekfood .col-8 {
+    margin-top: 2rem;
+  }
+
+  .pg-1_bk_2_ekfood ol {
+    color: #c7c7c7;
+  }
+
   .box_img {
     height: 40vh !important;
   }
 
   .pg-1_bk_2 h2 {
     font-size: 2rem !important;
+  }
+
+  .pg-1_bk_2 .col-8 {
+    margin-top: 2rem;
+  }
+
+  .pg-1_bk_2 ol {
+    color: #c7c7c7;
   }
 
   #carouselExampleIndicators {
@@ -3219,10 +3327,6 @@ html.is-animating .transition-fade2 {
 
   .friesa-col {
     width: 33.33333333% !important;
-  }
-
-  .tasks_box {
-    height: 1250px;
   }
 
   .tasks_box .col-3 h2 {
@@ -3412,6 +3516,65 @@ html.is-animating .transition-fade2 {
   .userflow_model img {
     border-radius: 9%;
   }
+
+  .home_model .text {
+    padding-top: 50px;
+  }
+
+  .home_model h2 {
+    font-size: 3rem;
+  }
+
+  .page_model {
+    margin-top: -100px;
+  }
+
+  .page_model .col-8 {
+    width: 100%;
+  }
+
+  .page_model .col-10 h2 {
+    margin-top: 50px;
+    font-size: 3rem;
+  }
+
+  .page_model img {
+    border-radius: 9px;
+  }
+
+  .senator_reserarch .comments p {
+    background-color: #111111;
+  }
+
+  .senator_target {
+    margin: 100px 0px;
+  }
+
+  .font-senator {
+    margin-bottom: 50px;
+  }
+
+  .sentar_task_info {
+    background: rgba(0, 0, 0, 0) !important;
+  }
+
+  .name_d_rial svg {
+    width: 100% !important;
+  }
+
+  .home_rial h2 {
+    margin: 30px 0px;
+    font-size: 3rem !important;
+  }
+
+  .pg-1_bk_2_rial .col-8 img {
+    transform: none;
+    margin-bottom: 0px;
+  }
+
+  .identity_rial .col-6 {
+    margin-top: 0px;
+  }
 }
 
 @media screen and (max-width: 736px) and (max-height: 414px) {
@@ -3426,11 +3589,16 @@ html.is-animating .transition-fade2 {
     padding-right: 10px;
   }
 
+  .pg-1_bk_0 p {
+    font-weight: 500;
+  }
+
   .text_plus .col-6 {
     width: 100%;
   }
 
   .text_plus h3 {
+    margin-top: 2rem;
     font-size: 1rem !important;
   }
 
