--- a/css/style.css
+++ b/css/style.css
@@ -2628,7 +2628,10 @@ html.is-animating .transition-fade2 {
   margin-top: 20px !important;
   padding-bottom: 0px !important;
 }
-
+.row_info_main .col-6 h5{
+  padding-left: 10px;
+  color: #696969 !important;
+}
 .row_info_main .col-6 {
   display: flex;
   align-items: center;
