--- a/css/style.css
+++ b/css/style.css
@@ -2145,6 +2145,14 @@ background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(19, 80, 60, 1)
   width: 85% !important;
   padding-top: 20%;
 }
+.imgbox_avto{
+  background-color: #ffe300 !important;
+}
+.imgbox_avto img{
+  position: absolute;
+  width: 85% !important;
+  padding-top: 20%;
+}
 
 #carouselExampleIndicators2 {
   display: none;
