--- a/css/style.css
+++ b/css/style.css
@@ -783,7 +783,7 @@ html.is-animating .transition-fade2 {
   padding-bottom: 100px;
 }
 .avto_mob {
-  background-color: #ffe303 !important;
+  background-color: #dec500 !important;
 }
 .friesa_mob .text_plus {
   padding: 60px;
