--- a/css/style.css
+++ b/css/style.css
@@ -2156,6 +2156,10 @@ background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(19, 80, 60, 1)
 .imgbox_avto{
   background-color: #ffe300 !important;
 }
+.imgbox_Ai{
+  background-color: #ce0041 !important;
+
+}
 .imgbox_avto img{
   position: absolute;
   width: 85% !important;
