--- a/css/style.css
+++ b/css/style.css
@@ -2157,8 +2157,11 @@ background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(19, 80, 60, 1)
   background-color: #ffe300 !important;
 }
 .imgbox_Ai{
-  background-color: #ce0041 !important;
-
+  background-color: #e42457 !important;
+}
+.imgbox_Ai img{
+  width: 70%;
+  transform: translateX(10%);
 }
 .imgbox_avto img{
   position: absolute;
