--- a/css/style.css
+++ b/css/style.css
@@ -1722,6 +1722,9 @@ background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(19, 80, 60, 1)
 .imgbox_maria{
   background-color: #ffe800 !important;
 }
+.imgbox_maria img {
+  width: 70% !important;
+}
 
 .imgbox_aston img {
   width: 85% !important;
