--- a/css/style.css
+++ b/css/style.css
@@ -1726,6 +1726,9 @@ background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(19, 80, 60, 1)
 .imgbox_maria{
   background-color: #ffe800 !important;
 }
+.imgbox_inver{
+  background-color: #ce5112 !important;
+}
 .imgbox_maria img {
   width: 70% !important;
 }
