--- a/css/style.css
+++ b/css/style.css
@@ -1727,7 +1727,7 @@ background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(19, 80, 60, 1)
   background-color: #ffe800 !important;
 }
 .imgbox_inver{
-  background-color: #ce5112 !important;
+  background-color: #d94b0f !important;
 }
 .imgbox_maria img {
   width: 70% !important;
