--- a/css/style.css
+++ b/css/style.css
@@ -2762,7 +2762,14 @@ background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(19, 80, 60, 1)
   left: 0vh;
   background: radial-gradient(50% 50% at 50% 50%, #EBC895 0%, rgba(217, 217, 217, 0) 100%);
 }
+.blur_obj_ivert{
+  background: radial-gradient(50% 50% at 50% 50%, #d94b0f 0%, rgba(217, 217, 217, 0) 100%);
 
+}
+.blur_obj_maria{
+  background: radial-gradient(50% 50% at 50% 50%, #fff465 0%, rgba(217, 217, 217, 0) 100%);
+
+}
 .blur_obj_senator {
   left: -10vh;
   background: radial-gradient(50% 50% at 50% 50%, #f3c478, rgba(217, 217, 217, 0));
