--- a/css/style.css
+++ b/css/style.css
@@ -1102,7 +1102,7 @@ background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(19, 80, 60, 1)
       background: linear-gradient(to top, rgba(255, 255, 255, 1), #ffed06 11%, rgb(255, 237, 6) 87.82%, rgba(255, 255, 255, 1));
   }
   .pg-1_bk_2_invert{
-      background: linear-gradient(to top, rgba(217, 75, 14, 0), #d94b0f 8.4%, #d94b0f 87.82%, rgba(217, 75, 14, 0));
+      background: linear-gradient(to top, rgba(217, 75, 14, 0), #cb6032 8.4%, #d94b0f 87.82%, rgba(217, 75, 14, 0));
   }
   
 .img_as img {
