--- a/css/style.css
+++ b/css/style.css
@@ -2682,7 +2682,7 @@ background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(19, 80, 60, 1)
 .mobile_pic {
   position: relative;
   width: 100%;
-  height: 27vh;
+  height: 14rem;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 39px;
